syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "time_window.proto";

package sensu.types;

option go_package = "types";
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;

// EventFilter is a filter specification.
message EventFilter {
  // Name is the unique identifier for a filter
  string name = 1;

  // Action specifies to allow/deny events to continue through the pipeline
  string action = 2;

  // Statements is an array of boolean expressions that are &&'d together
  // to determine if the event matches this filter.
  repeated string statements = 3 [(gogoproto.jsontag) = "statements"];

  // When indicates a TimeWindowWhen that a filter uses to filter by days & times
  TimeWindowWhen when = 6;

   // Namespace to which the filter belongs to
   string namespace = 7;
}
